Redesign permission auth
