# backend/wiki/api.py
@@ -2,8 +2,8 @@ from fastapi import APIRouter
 from starlette.responses import JSONResponse
 
 from wiki.auth.routers import auth_router
-from wiki.organization.routers import organization_router
-from wiki.user.routers import user_router
+from wiki.organization.router import organization_router
+from wiki.user.router import user_router
 
 api_router = APIRouter(
     default_response_class=JSONResponse
