# backend/wiki/organization/router.py
@@ -1,16 +1,15 @@
-from typing import Optional
-
 from fastapi import APIRouter, Depends
 from sqlalchemy.ext.asyncio import AsyncSession
 from starlette import status
 
 from wiki.common.exceptions import WikiException, WikiErrorCode
 from wiki.database.deps import get_db
-from wiki.organization.models import Organization
 from wiki.organization.repository import OrganizationRepository
 from wiki.organization.schemas import OrganizationIdentifiers, OrganizationInfoResponse, CreateOrganization
 
+
 organization_router = APIRouter()
+
 
 @organization_router.get(
     "/info",
@@ -22,8 +21,6 @@ async def get_organization(organization_get: OrganizationIdentifiers = Depends()
                            session: AsyncSession = Depends(get_db)):
 
     organization_repository: OrganizationRepository = OrganizationRepository(session)
-
-    organization: Optional[Organization] = None
 
     if organization_get.id is not None:
         organization = await organization_repository.get_organization_by_id(organization_get.id)
@@ -44,7 +41,7 @@ async def get_organization(organization_get: OrganizationIdentifiers = Depends()
 @organization_router.post(
     "/",
     response_model=OrganizationInfoResponse,
-    status_code=status.HTTP_200_OK,
+    status_code=status.HTTP_202_ACCEPTED,
     description="Create organization."
 )
 async def create_organization(organization: CreateOrganization = Depends(),
@@ -66,11 +63,12 @@ async def create_organization(organization: CreateOrganization = Depends(),
         access=organization.access
     )
 
+
 @organization_router.get(
-    "/",
+    "/all",
     response_model=list[OrganizationInfoResponse],
     status_code=status.HTTP_200_OK,
-    description="Get all organization."
+    description="Get all organizations."
 )
 async def get_organizations(session: AsyncSession = Depends(get_db)):
     organization_repository: OrganizationRepository = OrganizationRepository(session)
@@ -89,6 +87,3 @@ async def get_organizations(session: AsyncSession = Depends(get_db)):
         )
 
     return result_organization
-
-
-# удалять
